# apicase

./: .gitignore  CLAUDE.md  README.md  test-commit-identity.txt
app/: README.md  index.html  package-lock.json  package.json
app/src/: AiChat.tsx  App.css  App.tsx  FlowCanvas.tsx  RequestEditor.tsx  TerminalPane.tsx  case.ts  draft.ts  flow.ts  main.tsx  markdown.tsx  proxy.ts  settings.ts  shortcuts.ts  theme.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/test/: case.test.mjs  harness.mjs  markdown.test.mjs
docs/0.latest/: 0.概览.md  1.产品概念模型.md  2.技术架构.md  3.YAML格式规范.md
docs/1.feature/20260628-脚手架与单API调试MVP/: 产品技术方案.md
docs/1.feature/20260630-case读写与格式/: 技术方案.md
docs/1.feature/20260630-flow画布与三视图/: 产品技术方案.md
docs/1.feature/20260630-工作空间与界面外壳/: 技术方案.md
docs/1.feature/20260701-environment与界面优化/: 技术方案.md
docs/1.feature/20260701-flow执行引擎/: 技术方案.md
docs/1.feature/20260701-多标签页与视图切换修复/: 产品技术方案.md
docs/1.feature/20260702-界面交互优化/: 技术方案.md
docs/1.feature/20260706-常用快捷键/: 产品技术方案.md
docs/1.feature/20260709-三栏布局与终端AI/: 产品技术方案.md
docs/1.feature/20260716-界面细节与文档能力/: 产品技术方案.md
docs/1.feature/20260716-配置页关于/: 产品技术方案.md
docs/1.feature/20260721-代理设置/: 产品技术方案.md
docs/1.feature/20260721-响应区可拖动折叠/: 产品技术方案.md
docs/1.feature/20260721-最近工作空间持久化/: 产品技术方案.md
docs/1.feature/20260721-键值表描述列与垃圾桶删除/: 产品技术方案.md
docs/1.feature/20260722-响应区断言栏/: 产品技术方案.md
