[package]
name = "app"
version = "0.1.0"
description = "apicase — API 调试、管理与用例编排桌面应用"
authors = ["apicase"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP 客户端：rustls 避免本地 OpenSSL 依赖，利于跨平台
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
# 仅用于 perform_request 的异步测试
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
